Adjustment On Import Statement

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,7 +3,7 @@
 @import "products";
 @import "chart";
 @import "dashboardapp";
-@import "mediaquery";
+@import "mediaQuery";
 
 :root {
     font-family: Inter, system-ui, Avenit, Helvetica, Arial, sans-serif;
