--- a/src/styles/_dashboard.scss
+++ b/src/styles/_dashboard.scss
@@ -14,6 +14,7 @@
         >svg{
             font-size: 1.2rem;
             opacity: 0.7;
+            margin-left: 4rem;
         }
         >img{
             @include square(2rem);
